--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BeatWave</title>
+    <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
    <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,17 +18,20 @@
             <div><img
                     src="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png"
                     alt="">
-                <h1>WaveMusic</h1>
+                <h1>BeatWave</h1>
             </div>
         </nav>
 
 
 
         <div class="songdetails">
+
+            <div class="disc"></div>
+
             <div class="coverimg"></div>
 
-            <marquee behavior="" direction="">
-                <h1 id="title">Mi-Amor(PagalWorldl).mp3</h1>
+            <marquee   direction="left" scrollamount="6">
+                <h1 id="title"></h1>
             </marquee>
             <input class="playtime" value="0" type="range" name="" id="playtime">
             <div class="controls"> <img id="prev" src="https://cdn-icons-png.flaticon.com/512/318/318477.png" alt="">
