volume slider added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeatWave</title>
-    <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png"
+        type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-   <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -30,11 +32,12 @@
 
             <div class="coverimg"></div>
 
-            <marquee   direction="left" scrollamount="6">
+            <marquee direction="left" scrollamount="6">
                 <h1 id="title"></h1>
             </marquee>
             <input class="playtime" value="0" type="range" name="" id="playtime">
-            <div class="controls"> <img id="prev" src="https://cdn-icons-png.flaticon.com/512/318/318477.png" alt="">
+            <div class="controls"><img id="volume" src="https://cdn-icons-png.flaticon.com/512/727/727269.png" alt=""> <input id="volslider" value="0" type="range">
+                <img id="prev" src="https://cdn-icons-png.flaticon.com/512/318/318477.png" alt="">
                 <img id="play" src="https://cdn-icons-png.flaticon.com/512/109/109197.png" alt="">
                 <img id="pause" src="https://cdn-icons-png.flaticon.com/512/61/61180.png" alt="">
                 <img id="next" src="https://cdn-icons-png.flaticon.com/512/318/318476.png" alt="">
