volume slider updated

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     src="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png"
                     alt="">
                 <h1>BeatWave</h1>
+
             </div>
+            <i id="menu" class="ri-menu-line"></i>
         </nav>
 
 
