--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <div class="container">
 
+        <div class="playlists">
+            <div class="pllsongs"><h1>InProgress</h1></div>
+        </div>
+
         <nav>
             <div><img
                     src="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png"
@@ -24,6 +28,7 @@
 
             </div>
             <i id="menu" class="ri-menu-line"></i>
+
         </nav>
 
 
@@ -38,11 +43,12 @@
                 <h1 id="title"></h1>
             </marquee>
             <input class="playtime" value="0" type="range" name="" id="playtime">
-            <div class="controls"><img id="volume" src="https://cdn-icons-png.flaticon.com/512/727/727269.png" alt=""> <input id="volslider" value="0" type="range">
-                <img id="prev" src="https://cdn-icons-png.flaticon.com/512/318/318477.png" alt="">
-                <img id="play" src="https://cdn-icons-png.flaticon.com/512/109/109197.png" alt="">
-                <img id="pause" src="https://cdn-icons-png.flaticon.com/512/61/61180.png" alt="">
-                <img id="next" src="https://cdn-icons-png.flaticon.com/512/318/318476.png" alt="">
+            <div class="controls"><img id="volume" src="https://cdn-icons-png.flaticon.com/512/727/727269.png" alt="">
+                <input id="volslider" value="0" type="range">
+                <img id="prev" src="https://cdn-icons-png.flaticon.com/512/318/318477.png" alt="controls">
+                <img id="play" src="https://cdn-icons-png.flaticon.com/512/109/109197.png" alt="controls">
+                <img id="pause" src="https://cdn-icons-png.flaticon.com/512/61/61180.png" alt="controls">
+                <img id="next" src="https://cdn-icons-png.flaticon.com/512/318/318476.png" alt="controls">
             </div>
 
         </div>
@@ -50,6 +56,11 @@
     </div>
     <!-- 
     <div class="main"></div> -->
+    <footer><img
+            src="https://png.pngtree.com/png-clipart/20220812/ourmid/pngtree-podcast-headphones-neon-light-sign-png-image_6107856.png"
+            alt="">
+        <h1>© BeatWave | 2023</h1>
+    </footer>
 
 </body>
 
