menu content added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <div class="container">
 
         <div class="playlists">
-            <div class="pllsongs"><h1>InProgress</h1></div>
+            <div class="pllsongs"><br>
+                <h1 id="trendsong">Trending Songs</h1>
+                <div class="songs">
+                   <!-- songhere -->
+                </div>
+            </div>
         </div>
 
         <nav>
