--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="pllsongs"><br>
                 <h1 id="trendsong">Trending Songs</h1>
                 <div class="songs">
-                   <!-- songhere -->
+                   <!-- songlisthere -->
                 </div>
             </div>
         </div>
